--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,8 @@
         android:background="@drawable/round_boton"
         android:text="accedir"
         app:iconTint="#000000"
-        app:rippleColor="#000000">
+        app:rippleColor="#000000"
+        android:onClick="login">
 
     </Button>
 
