--- a/app/src/main/res/layout/activity_menu_app.xml
+++ b/app/src/main/res/layout/activity_menu_app.xml
@@ -8,40 +8,62 @@
     android:padding="16dp"
     tools:context=".MenuApp">
 
-
-    <TextView
-        android:id="@+id/Titulo"
+    <Button
+        android:id="@+id/agregarCesta"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
-        android:text="Productes" />
+        android:layout_gravity="center"
+        android:text="Agregar a la cesta" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginTop="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/Titulo"/>
+    <GridLayout
+        android:id="@+id/gridLayout"
+        android:layout_width="379dp"
+        android:layout_height="678dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:columnCount="2"
+        android:columnOrderPreserved="false"
+        android:rowCount="2">
 
-    <!-- product_item.xml -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        <!-- Aquí agregarás las ImageView para mostrar las imágenes -->
 
-        <TextView
-            android:id="@+id/prodName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/prodPrice"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/prodDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+        <ImageView
+            android:id="@+id/ps4"
+            android:layout_width="253dp"
+            android:layout_height="220dp"
+            android:layout_row="0"
+            android:layout_column="3"
+            app:srcCompat="@drawable/ps4" />
+
+        <ImageView
+            android:id="@+id/movil"
+            android:layout_width="151dp"
+            android:layout_height="221dp"
+            android:layout_row="1"
+            android:layout_column="3"
+            app:srcCompat="@drawable/movil" />
+
+        <ImageView
+            android:id="@+id/nintendo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            app:srcCompat="@drawable/nintendo" />
+
+        <ImageView
+            android:id="@+id/xbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_columnWeight="2"
+
+            app:srcCompat="@drawable/xbox" />
+
+
+    </GridLayout>
 
 
 </RelativeLayout>
