--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -1,24 +1,41 @@
-<!-- product_item.xml -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:padding="16dp">
 
+    <ImageView
+        android:id="@+id/imagenImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ps4"
+        android:layout_marginTop="20dp"/>
+    <TextView
+        android:id="@+id/idTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/prodName"
-        android:layout_width="match_parent"
+        android:id="@+id/nombreTextView"
+        android:layout_width="wrap_content"
+
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/prodPrice"
-        android:layout_width="match_parent"
+        android:id="@+id/descripcionTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:id="@+id/prodDescription"
-        android:layout_width="match_parent"
+        android:id="@+id/precioTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+
+
+
 
 </LinearLayout>
